[gd_scene load_steps=9 format=2]

[ext_resource path="res://StompArea.gd" type="Script" id=1]
[ext_resource path="res://Goomba.gd" type="Script" id=2]
[ext_resource path="res://Images/tile001.png" type="Texture" id=3]
[ext_resource path="res://Images/tile002.png" type="Texture" id=4]
[ext_resource path="res://Images/tile000.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Stomped",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 8.03125, 5.1875 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 8.5, 3 )

[node name="Goomba" type="KinematicBody2D"]
position = Vector2( 779, 436 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="GoombaSprites" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
frames = SubResource( 27 )
animation = "Moving"

[node name="GoombaCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.96875, 2.8125 )
shape = SubResource( 28 )

[node name="TurnCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 11, 0 )

[node name="StompArea" type="Area2D" parent="."]
position = Vector2( 3, -11 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( -1, 6 )
shape = SubResource( 29 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="StompArea" to="." method="_on_StompArea_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
